--- a/trunk/mscore/mscore/musescore.qrc
+++ b/trunk/mscore/mscore/musescore.qrc
@@ -303,5 +303,10 @@
       <file>data/icons-dark/tframe.svg</file>
       <file>data/icons-dark/fframe.svg</file>
       <file>data/icons-dark/measure.svg</file>
+
+      <file>schema/license.html</file>
+      <file>schema/musicxml.xsd</file>
+      <file>schema/xlink.xsd</file>
+      <file>schema/xml.xsd</file>
    </qresource>
 </RCC>
