--- a/trunk/mscore/mscore/aboutbox.ui
+++ b/trunk/mscore/mscore/aboutbox.ui
@@ -486,7 +486,7 @@
    </palette>
   </property>
   <property name="windowTitle">
-   <string>AboutBox</string>
+   <string>About MuseScore</string>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
