--- a/mscore/mscore/aboutbox.ui
+++ b/mscore/mscore/aboutbox.ui
@@ -491,6 +491,9 @@
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
+  <property name="modal">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout">
    <item>
     <layout class="QVBoxLayout">
