--- a/mscore/mscore/aboutbox.ui
+++ b/mscore/mscore/aboutbox.ui
@@ -495,6 +495,9 @@
    <bool>true</bool>
   </property>
   <layout class="QVBoxLayout">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetFixedSize</enum>
+   </property>
    <item>
     <layout class="QVBoxLayout">
      <item>
