--- a/trunk/mscore/mscore/prefsdialog.ui
+++ b/trunk/mscore/mscore/prefsdialog.ui
@@ -2236,7 +2236,7 @@
              </sizepolicy>
             </property>
             <property name="text">
-             <string>Character Set</string>
+             <string>Character Set:</string>
             </property>
            </widget>
           </item>
@@ -2457,31 +2457,40 @@
          <property name="title">
           <string>Audio</string>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout_11">
+         <layout class="QHBoxLayout" name="horizontalLayout_12">
           <item>
-           <layout class="QFormLayout" name="formLayout">
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_18">
-              <property name="text">
-               <string>Sample Rate:</string>
-              </property>
-             </widget>
+           <widget class="QLabel" name="label_18">
+            <property name="text">
+             <string>Sample Rate:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="exportAudioSampleRate">
+            <item>
+             <property name="text">
+              <string>44100</string>
+             </property>
             </item>
-            <item row="0" column="1">
-             <widget class="QComboBox" name="exportAudioSampleRate">
-              <item>
-               <property name="text">
-                <string>44100</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>48000</string>
-               </property>
-              </item>
-             </widget>
+            <item>
+             <property name="text">
+              <string>48000</string>
+             </property>
             </item>
-           </layout>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </widget>
