--- a/mscore/mscore/mixer.ui
+++ b/mscore/mscore/mixer.ui
@@ -373,7 +373,7 @@
         <item>
          <widget class="QComboBox" name="patch" >
           <property name="toolTip" >
-           <string>midi sound for part</string>
+           <string>MIDI Sound</string>
           </property>
          </widget>
         </item>
